<resources>
    <string name="app_name">Study</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="pesquisar">Pesquisar</string>

    <string name="descricao">Descrição</string>
    <string name="procurar_turmas">Turmas</string>
    <string name="conversas">Conversas</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracoes">Configurações</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="turmas">Turmas</string>
    <string name="modo_escuro">Ativar modo escuro</string>
    <string name="nome_da_turma">Nome da turma</string>
    <string name="adicionar_turma">Adicionar turma</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- \ u0020 é um código unicode para espaçamento entre as
    palavras que serão concatenadas com Strings-->

    <string name="usuario">Usuário \u0020</string>
    <string name="senha">Senha</string>
    <string name="entrou">\u0020 entrou</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="texto_bt_register">Ainda não possui uma conta?</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="idade">Idade</string>
    <string name="assunto_favorito">Assunto favorito</string>
    <string name="icone_do_app">Ícone do app</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="alterar_idioma">Alterar idioma</string>
    <string name="contatos_dos_devs">Contatos dos desenvolvedores</string>
    <string name="logout">Logout</string>
    <string name="registro_adicionado">Registro adicionado com sucesso</string>
    <string name="ocorreu_erro">Ocorreu um erro. Por favor reinicie o app</string>
    <string name="dados_incorretos">Por favor, insira todos os dados corretamente</string>
    <string name="cancelar">Cancelar</string>
    <string name="insira_nome_valido">Por favor, insira um nome válido para criar a turma</string>
    <string name="turma">Turma \u0020</string>
    <string name="criada">\u0020 criada</string>
    <string name="criar_turma">Criar turma</string>
    <string name="digite_nome_turma">Digite o nome da turma a ser criada</string>
    <string name="registro_nao_encontrado">Login ou senha incorretos</string>
    <string name="preencha_corretamente">Preencha os campos corretamente</string>
    <string name="contatos">Contatos:</string>

    <string-array name="lista_idiomas">
        <item>Padrão</item>
        <item>Inglês</item>
        <item>Espanhol</item>
        <item>Português Br</item>
    </string-array>

</resources>