<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_turmas">

    <fragment
        android:id="@+id/nav_turmas"
        android:name="com.example.study50.ui.TurmasFragment"
        android:label="@string/procurar_turmas"
        tools:layout="@layout/fragment_turmas" />

    <fragment
        android:id="@+id/nav_conversas"
        android:name="com.example.study50.ui.ConversasFragment"
        android:label="@string/conversas"
        tools:layout="@layout/fragment_conversas" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.study50.ui.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="com.example.study50.ui.ConfiguracoesFragment"
        android:label="@string/configuracoes"
        tools:layout="@layout/fragment_configuracoes"/>
</navigation>