<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ConfiguracoesFragment">

    <Switch
        android:id="@+id/sw_modo_escuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/modo_escuro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_editar_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/editar_perfil"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_alterar_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/alterar_idioma"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="187dp"
        android:text="@string/contatos_dos_devs"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="187dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="30sp" />


</LinearLayout>